// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should deauth on 401 1`] = `
Array [
  Array [
    "Removing deployment:",
    "test-id",
  ],
  Array [
    "Error: authorization expired!",
    "Please, relogin and try again.",
  ],
]
`;

exports[`Should remove 1`] = `
Array [
  Array [
    "Removing deployment:",
    "test-id",
  ],
  Array [
    "Deployment removed!",
  ],
]
`;

exports[`Should remove by token instead of default auth 1`] = `
Array [
  Array [
    "Removing deployment:",
    "test-id",
  ],
  Array [
    "
Removing using given token..",
  ],
  Array [
    "Deployment removed!",
  ],
]
`;

exports[`Should remove by url 1`] = `
Array [
  Array [
    "Removing deployment:",
    "test.example.com",
  ],
  Array [
    "Deployment removed!",
  ],
]
`;

exports[`Should show not found error 1`] = `
Array [
  Array [
    "Removing deployment:",
    "test-id",
  ],
  Array [
    "Error: container or function was not found!",
    "Please, check deployment ID and try again.",
  ],
]
`;

exports[`Should show not found error 2`] = `
Array [
  Array [
    "Removing deployment:",
    "test-id",
  ],
  Array [
    "Error!",
    "Could not remove the deployment.",
  ],
]
`;

exports[`Should show remove error 1`] = `
Array [
  Array [
    "Removing deployment:",
    "test-id",
  ],
  Array [
    "Error removing project:",
    "HTTPError: Response code 500 (Internal Server Error)",
  ],
]
`;
